# saddle-world-voxel-world

./: .gitignore  Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: 9mCPbO0p.js  B2QrbtJn.js  B6AvTvyH.js  B83_Rt2f.js  BVSR4Vdv.js  BntKMxB0.js  BokUfo9P.js  DtW3Cja0.js  fPhP5Zy3.js  rLTCjLtY.js
_app/immutable/entry/: app.N2HZxAJv.js  app.lcJsOoIF.js  start.Axvov_Yj.js  start.BREuCs1j.js
_app/immutable/nodes/: 0.C7RNMX9T.js  0.CMUUdH2a.js  1.BYQwOL1g.js  1.BxYEpgLO.js  2.ByxcX5YO.js  2.DarHAL1k.js  3.B5po8WyA.js  3.ChTeLFdj.js  4.BVH96p8w.js  4.o8FJ6XRq.js
benches/: voxel_world_benches.rs
demo/basic/: index.html
demo/block_editing/: index.html
demo/debug_gizmos/: index.html
demo/lab/: index.html
demo/mini_minecraft/: index.html
demo/multi_viewer/: index.html
demo/persistence/: index.html
demos/basic/: index.html
demos/block_editing/: index.html
demos/debug_gizmos/: index.html
demos/mini_minecraft/: index.html
demos/multi_viewer/: index.html
demos/persistence/: index.html
docs/: architecture.md  configuration.md  persistence.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
docs/persistence/: __data.json  index.html
docs/persistence.md/: __data.json  index.html
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/block_editing/: Cargo.toml
examples/block_editing/src/: main.rs
examples/debug_gizmos/: Cargo.toml
examples/debug_gizmos/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: main.rs
examples/lab/src/scenarios/: mod.rs
examples/mini_minecraft/: Cargo.toml
examples/mini_minecraft/src/: e2e.rs  main.rs  scenarios.rs
examples/multi_viewer/: Cargo.toml
examples/multi_viewer/src/: main.rs
examples/persistence/: Cargo.toml
examples/persistence/src/: main.rs
examples/support/: Cargo.toml
examples/support/src/: lib.rs
src/: benchmark_support.rs  block.rs  block_tests.rs  chunk.rs  chunk_tests.rs  config.rs  coordinates.rs  coordinates_tests.rs  lib.rs  raycast.rs  raycast_tests.rs  stats.rs  viewer.rs  viewer_tests.rs
src/meshing/: ao.rs  ao_tests.rs  cross.rs  cross_tests.rs  greedy.rs  greedy_tests.rs  lighting.rs  lighting_tests.rs  mod.rs
src/persistence/: codec.rs  codec_tests.rs  mod.rs  region.rs  region_tests.rs
src/terrain/: generator.rs  mod.rs  noise.rs  terrain_tests.rs
tests/: integration.rs
