[workspace]
members = [
    "support",
    "basic",
    "block_editing",
    "multi_viewer",
    "persistence",
    "debug_gizmos",
    "mini_minecraft",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["bevy_asset", "bevy_render", "bevy_pbr", "serialize"] }
saddle-world-voxel-world = { path = ".." }
saddle-camera-orbit-camera = { git = "https://github.com/julien-blanchon/saddle-camera-orbit-camera" }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
