[package]
name = "saddle-world-voxel-world-example-mini-minecraft"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-world-voxel-world = { workspace = true }
saddle-pane = { workspace = true }
saddle-world-voxel-world-example-support = { path = "../support" }

[lints]
workspace = true
