[package]
name = "saddle-world-voxel-world-example-mini-minecraft"
version = "0.1.0"
edition = "2024"
publish = false

[features]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { workspace = true }
saddle-world-voxel-world = { workspace = true }
saddle-pane = { workspace = true }
saddle-world-voxel-world-example-support = { path = "../support" }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }

[lints]
workspace = true
